--- a/content/modules/ROOT/pages/04-ansible-navigator-using-execution-environments.adoc
+++ b/content/modules/ROOT/pages/04-ansible-navigator-using-execution-environments.adoc
@@ -1,22 +1,25 @@
 :sectnums:
+:experimental:
 = Using execution environments
 
-Up to this point, `ansible-navigator` has been running with just the built in modules and executing without an execution environment.
+Up to this point, *ansible-navigator* has been running with just the built in modules and executing without an execution environment.
 
-Let's see what happens when we change `ansible-navigator.yml` to use the default execution environment.
+Let's see what happens when we change *ansible-navigator.yml* to use the default execution environment.
 
-**1.** Open `ansible-navigator.yml` and change `enabled: false` to `enabled: true` under the `execution-environment` settings block. The file should look like this:
-```
+. Open *ansible-navigator.yml* and change *enabled: false* to *enabled: true* under the *execution-environment* settings block. The file should look like this:
++
+[source,yaml]
+----
 ---
 ansible-navigator:
   execution-environment:
     container-engine: podman
-    image: ee-supported-rhel8:2.0.0
+    image: quay.io/acme_corp/first_playbook_ee:latest
     enabled: true
     pull-policy: never
 
   playbook-artifact:
-    save-as: /home/rhel/playbook-artifacts/{playbook_name}-artifact-{ts_utc}.json
+    save-as: /home/rhel/ansible-files/{playbook_name}-artifact-{ts_utc}.json
 
   logging:
     level: debug
@@ -24,15 +27,18 @@ ansible-navigator:
   editor:
     command: code-server {filename}
     console false
-```
+----
 
-**2.** Re-reun your test playbook:
-```
+. Re-reun your test playbook:
+
++
+[source,shell]
+----
 ansible-navigator run ./test.yml
-```
+----
++
+NOTE: *ansible-navigator* knows that it should be using an execution environment but none are currently present. You should see a pull process happening now where an execution environment is being pulled from container registry. *ansible-navigator* can be configured in the same yaml file to pull from your own Private Automation Hub.
 
-Notice that `ansible-navigator` knows that it should be using an execution environment but none are currently present. You should see a pull process happening now where an execution environment is being pulled from container registry. `ansible-navigator` can be configured in the same yaml file to pull from your own Private Automation Hub.
+. Your *test.yml* file should have executed successfully. You can now use *ansible-navigator* to inspect this execution environment by issuing the *:collections* subcommand.
 
-**3.** Your `test.yml` file should have executed successfully. You can now use `ansible-navigator` to inspect this execution environment by issuing the `:collections` subcommand.
-
-**4.** While inspecting collections, there is a module in the `ansible.utils` collection called `fact_diff`. Locate the author of this module and remember the github handle associated with this person.
+. While inspecting collections, there is a module in the *ansible.utils* collection called *fact_diff*. Locate the author of this module and remember the github handle associated with this person.
