--- a/content/modules/ROOT/pages/07-project-additional.adoc
+++ b/content/modules/ROOT/pages/07-project-additional.adoc
@@ -1,115 +1,73 @@
----
-slug: controller-101-project-additional
-id: k3yrknwswcrl
-type: challenge
-title: 1.5 - Creating a second Project
-teaser: Importing a second repository into a new project
-notes:
-- type: text
-  contents: |-
-    # Projects
+:sectnums:
+:experimental:
+:imagesdir: ../assets/images
+= 1.5 - Creating a second Project
 
-    ![projects-list-all.png](../assets/projects-list-all.png)
+We already have a *Project* called *Apache playbooks* from a previous challenge, where we can find the *apache.yml* and *test_apache_role.yml*  playbooks.
 
-    You can manage playbooks on your server, or by placing your playbooks into a source code management (SCM) system supported by automation controller, including Git, Subversion, and Red Hat Insights.
-tabs:
-- title: Automation controller
-  type: service
-  hostname: control
-  path: /
-  port: 443
-difficulty: ""
-timelimit: 600
----
-💡 1.5 - Projects
-===
-
-We already have a **Project** called `Apache playbooks` from a previous challenge, where we can find the `apache.yml` and `test_apache_role.yml`  playbooks.
-
-In this new challenge, we are going to create a second project named `Additional playbooks`, which will include the following playbooks: `extended_services.yml` (installs postfix and postgresql), `motd_facts.yml` (sets a message of the day) and `loop_users.yml` (creates multiple users).
+In this new challenge, we are going to create a second project named *Additional playbooks*, which will include the following playbooks: *extended_services.yml* (installs postfix and postgresql), *motd_facts.yml* (sets a message of the day) and *loop_users.yml* (creates multiple users).
 
 
+== Hands-On Experience
 
-☑️ Task 1 - Creating the second Project
-===
+======
+.☑️ Task 1 - Creating the second Project
+[%collapsible]
+=====
+NOTE: In the btn:[Controller] tab
 
-1. Click the **Projects** link in the **Resources** section of the sidebar
-2. Click the **Add** button
-3. **Name** the Project as `Additional playbooks`
-4. For the **Source Control Type** dropdown, select **Git**, this will enable new fields below.
-5. For the **Source Control URL** field, copy & paste the following URL
-  ```
+
+. Click the *Projects* link in the *Resources* section of the sidebar
+. Click the *Add* button
+. *Name* the Project as *Additional playbooks*
+. For the *Source Control Type* dropdown, select *Git*, this will enable new fields below.
+. For the *Source Control URL* field, copy & paste the following URL
++
+[source,text]
+----
   https://github.com/leogallego/instruqt-wyfp-additional.git
-  ```
-6. Leave all the other fields the same and click **Save**
+----
+. Leave all the other fields the same and click *Save*
+=====
+======
 
-☑️ Task 2 - Verify the new Project synced successfully
-===
+======
+.☑️ Task 2 - Verify the new Project synced successfully
+[%collapsible]
+=====
+NOTE: In the btn:[Controller] tab
 
-1. After saving, you should be taken to the **Details** of the project we just created
-2. The **Last Job Status** should display **Running** in blue, give it a few seconds
-3. If it changed to **Successful** and is showing in green, the project synced correctly.
+. After saving, you should be taken to the *Details* of the project we just created
+. The *Last Job Status* should display *Running* in blue, give it a few seconds
+. If it changed to *Successful* and is showing in green, the project synced correctly.
 
-As an alternative, to see the status of multiple projects, you can:
-1. Click the **Projects** link in the **Resources** section of the sidebar
-2. Check the **Status** column for the project is green and reads **Successful**
-3. Click the **Successful** and review the output of the sync
+. As an alternative, to see the status of multiple projects, you can:
++
+.. Click the *Projects* link in the *Resources* section of the sidebar
+.. Check the *Status* column for the project is green and reads *Successful*
+.. Click the *Successful* and review the output of the sync
+=====
+======
 
-✅ Next Challenge
-===
-Press the `Check` button below to go to the next challenge once you’ve completed the task.
+== Embracing the Next Challenge
 
-🐛 Encountered an issue?
-====
+======
+.✅ Next Challenge
+[%collapsible]
+=====
+Once you've completed the task, press the image:next.png[Next, 50] button at the bottom to proceed to the next challenge. 
 
-If you have encountered an issue or have noticed something not quite right, please [open an issue](https://github.com/ansible/instruqt/issues/new?labels=intro-to-controller&title=Issue+with+Intro+to+Controller+slug+ID:+controller-101-project-2&assignees=leogallego).
+* The image:next.png[Next, 50] button will validate your steps and move you to the next challenge or chapter. If any steps are missing, an error will be produced, allowing you to recheck your steps before clicking the Next button again to continue.
 
-<style type="text/css" rel="stylesheet">
-  .lightbox {
-    display: none;
-    position: fixed;
-    justify-content: center;
-    align-items: center;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding: 1rem;
-    background: rgba(0, 0, 0, 0.8);
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-  .lightbox:target {
-    display: flex;
-  }
-  .lightbox img {
-    /* max-height: 100% */
-    max-width: 60%;
-    max-height: 60%;
-  }
-  img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  h1 {
-    font-size: 18px;
-  }
-    h2 {
-    font-size: 16px;
-    font-weight: 600
-  }
-    h3 {
-    font-size: 14px;
-    font-weight: 600
-  }
-  p span {
-    font-size: 14px;
-  }
-  ul li span {
-    font-size: 14px
-  }
-</style>
+* You also have the option to automatically solve a challenge or chapter by clicking the image:solve.png[Solve, 55] button, which will complete the exercises for you.
+=====
+======
+
+
+======
+.🐛 Encountered an issue?
+[%collapsible]
+=====
+If you have encountered an issue or have noticed something not quite right, Please open an issue on the https://github.com/redhat-gpte-devopsautomation/zt-get-started-with-automation-controller/issues/new?labels=content+error&title=Issue+with+:+07-project-additional&assignees=miteshget[Get started with Automation Controller, window=_blank]
+=====
+======
